src/components/List.module.css
.wrapper {
  display: grid;
  grid-template-rows: 0fr;
  transition: grid-template-rows 0.3s ease-out;
}

.wrapper:has(*:not(:empty)) {
  border-top: 0.0625rem solid var(--color-neutral-40);
}

.wrapperExpanded {
  grid-template-rows: 1fr;
}

.list {
  overflow: hidden;
}

.item {
  height: var(--item-height);
  display: flex;
  gap: 1.375rem;
  align-items: center;
  padding: 0 1rem 0 0.5rem;
  position: relative;
  font-size: 1.5rem;
  letter-spacing: 0.1px;
  border-bottom: 0.0625rem solid var(--color-neutral-40);
}

.checkbox {
  flex-shrink: 0;
  width: 1.875rem;
  display: grid;
  place-items: center;
  grid-template-areas: 'check';
}

.input {
  grid-area: check;
  opacity: 0;
  cursor: pointer;
  height: 0;
  width: 0;
}

.check {
  position: relative;
  grid-area: check;
  width: 100%;
  height: 1.875rem;
  border: 0.0625rem solid var(--color-neutral-40);
  border-radius: 50%;
  transition: all 0.3s ease;
}

.input:checked ~ .check {
  border-color: var(--color-primary-25);
}

.input:checked ~ .check:after {
  content: url('../assets/icons/check.svg');
  display: block;
  position: absolute;
  left: 0.3rem;
  top: 0.1rem;
  width: 1.25rem;
  object-fit: contain;
  color: var(--color-primary-25);
}

.text {
  word-break: break-all;
  transition: color 0.3s;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.textCompleted {
  color: var(--color-text-40);
  text-decoration: line-through;
}

